# Algorithm-and-Data-structure

./: .gitignore
Algorithmic Toolbox/: .gitignore  CMakeLists.txt
Algorithmic Toolbox/Week1/: APlusB.cpp  CMakeLists.txt  StressTest.cpp  max_pairwise_product.cpp
Algorithmic Toolbox/Week2/: CMakeLists.txt  fibonacci.cpp  fibonacci_huge.cpp  fibonacci_last_digit.cpp  fibonacci_partial_sum.cpp  fibonacci_sum_last_digit.cpp  gcd.cpp  lcm.cpp
Algorithmic Toolbox/Week3/: CMakeLists.txt  change.cpp  covering_segments.cpp  different_summands.cpp  dot_product.cpp  fractional_knapsack.cpp  largest_number.cpp
Algorithmic Toolbox/Week4/: CMakeLists.txt  binary_search.cpp  majority_element.cpp  sorting.cpp
Algorithmic Toolbox/Week5/: CMakeLists.txt  change_dp.cpp  edit_distance.cpp  primitive_calculator.cpp
Algorithmic Toolbox/Week6/: CMakeLists.txt  knapsack.cpp  placing_parentheses.cpp
Data Structure/Week1/: CMakeLists.txt  check_brackets.cpp  process_packages.cpp  tree-height.cpp
Data Structure/Week2/: CMakeLists.txt  CMakeSettings.json
Data Structure/Week2/job_queue/: CMakeLists.txt  CMakeSettings.json  job_queue.cpp
Data Structure/Week2/make_heap/: CMakeLists.txt  build_heap.cpp
Data Structure/Week2/merging_tables/: CMakeLists.txt  merging_tables.cpp
