cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 14)

add_executable(FibonacciHuge "fibonacci_huge.cpp")
add_executable(FibonacciLastDigit "fibonacci_last_digit.cpp")
add_executable(FibonacciPartialSum "fibonacci_partial_sum.cpp")
add_executable(FibonacciSumLastDigit "fibonacci_sum_last_digit.cpp")
add_executable(Fibonacci "fibonacci.cpp")
add_executable(LCM "lcm.cpp")
add_executable(GCD "gcd.cpp")
