cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 14)

add_executable(Change "change.cpp")
add_executable(CoveringSegment "covering_segments.cpp")
add_executable(DifferentSummands "different_summands.cpp")
add_executable(DotProduct "dot_product.cpp")
add_executable(FractionalKnapsack "fractional_knapsack.cpp")
add_executable(LargestNumber "largest_number.cpp")
