cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 14)

add_executable(BinarySearch binary_search.cpp)
add_executable(Closest closest.cpp)
add_executable(Inversion inversions.cpp)
add_executable(MajorityElement majority_element.cpp)
add_executable(PointsSegments points_and_segments.cpp)
add_executable(Sorting sorting.cpp)
