cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 14)

add_executable(Change change_dp.cpp)
add_executable(PrimitiveCalculator primitive_calculator.cpp)
add_executable(EditDistance edit_distance.cpp)
add_executable(LongestCommonSubsequenceTwo lcs2.cpp)
add_executable(LongestCommonSubsequenceThree lcs3.cpp)